<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header">

        <EditTextPreference
            app:key="column_1"
            app:title="@string/column1_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="column_2"
            app:title="@string/column2_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="row_1"
            app:title="@string/row1_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="row_2"
            app:title="@string/row2_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="valueList"
            app:title="@string/valueList"
            app:useSimpleSummaryProvider="true"
            app:entries ="@array/listPreference"
            app:entryValues="@array/listPreferenceValues"
            />



    </PreferenceCategory>


</PreferenceScreen>